Esta es una segunda version del proyecto

--- a/index.html
+++ b/index.html
@@ -70,6 +70,43 @@
 
 
         <!--Aqui comienza el contenido principal-->
+    <main>
+        <h1 class="main__title"> Panel de control</h1>
+        <ul class="main-migas">
+            <li><a href="#"></a></li>
+            <li class="divider"></li>
+            <li><a href="#" class="active">Bienvenido</a></li>
+        </ul>
+
+        <div class="main__data">
+            <div class="data__content-data">
+                <h3>Demostracion de consumo de API</h3>
+                <p>Esta tabla consume:    para obtener los datos que se van a indexar en la tabla</p>
+
+                <div class="main__divTable">
+                    <div class="main__div-header">
+                        <button onclick="openModal()" class="main__nuevo-registro">Registrar</button>
+                    </div>
+
+                    <table class="main__divTable-table">
+                        <thead class="main__divTable-table--thead">
+                            <tr>ID</tr>
+                            <tr>Nombre del Producto</tr>
+                            <tr>Precio</tr>
+                            <tr>Categoria</tr>
+                            <tr>ACCIONES</tr>
+                        </thead>
+                        <tbody id="productTableBody">
+                        </tbody>
+
+                    </table>
+
+                </div>
+
+            </div>
+        </div>
+    </main>
+
      </section>
 <!--Aqui termina el menu de navegacion y el contenido principal-->
 
